--- a/jadore/src/index.html
+++ b/jadore/src/index.html
@@ -12,10 +12,11 @@
     />
     <meta name="author" content="Uros Zikic" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
-      integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -109,9 +110,9 @@
     <main>
       <section class="section-one">
         <div
-          id="carouselExampleControls"
+          id="carouselExampleControls1"
           class="carousel slide"
-          data-ride="carousel"
+          data-bs-ride="carousel"
         >
           <div class="carousel-inner">
             <div class="carousel-item active">
@@ -119,170 +120,203 @@
                 <h2>Original perfumes</h2>
                 <a href="#">Choose</a>
               </div>
-              <img
-                class="d-block w-100"
-                src="../public/images/perfumes/image-9.jpg"
-                alt="First slide"
-              />
+
+              <div class="img-div"></div>
             </div>
+
             <div class="carousel-item">
               <div class="carousel-cta">
                 <h2>Original perfumes</h2>
                 <a href="#">Choose</a>
               </div>
-              <img
-                class="d-block w-100"
-                src="../public/images/perfumes/image-dark-1.png"
-                alt="Second slide"
-              />
+
+              <div class="img-div"></div>
             </div>
+
             <div class="carousel-item">
               <div class="carousel-cta">
                 <h2>Original perfumes</h2>
                 <a href="#">Choose</a>
               </div>
-              <img
-                class="d-block w-100"
-                src="../public/images/perfumes/image-11.jpg"
-                alt="Third slide"
-              />
+
+              <div class="img-div"></div>
             </div>
           </div>
-          <a
+          <button
             class="carousel-control-prev"
-            href="#carouselExampleControls"
-            role="button"
-            data-slide="prev"
+            type="button"
+            data-bs-target="#carouselExampleControls1"
+            data-bs-slide="prev"
           >
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-          </a>
-          <a
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button
             class="carousel-control-next"
-            href="#carouselExampleControls"
-            role="button"
-            data-slide="next"
+            type="button"
+            data-bs-target="#carouselExampleControls1"
+            data-bs-slide="next"
           >
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-          </a>
+            <span class="visually-hidden">Next</span>
+          </button>
         </div>
       </section>
       <!-- GRID -->
-      <section class="grid-section">
-        <div class="grid-holder">
-          <div class="grid-inner">
-            <div>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste
-                facere unde fugit voluptates est dolorum quia labore, repellat
-                perspiciatis? Voluptates temporibus facere ratione officia
-                perferendis beatae aliquid asperiores, neque reiciendis?
-              </p>
-            </div>
-            <div>
-              <img
-                src="../public/images/perfumes/image-9.jpg"
-                alt="fragrant perfumes"
-              />
-            </div>
+
+      <section class="grid">
+        <div class="grid-inner">
+          <img src="../public/images/perfumes/image-13.jpg" alt="grid-image" />
+          <div class="grid-info">
+            <p>Perfume Name</p>
+            <a href="#">Perfume Link</a>
           </div>
-          <div class="grid-inner">
-            <div>
-              <img
-                src="../public/images/perfumes/image-8.jpg"
-                alt="our offer of perfumes"
-              />
-            </div>
-            <div class="row-1">
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste
-                facere unde fugit voluptates est dolorum quia labore, repellat
-                perspiciatis? Voluptates temporibus facere ratione officia
-                perferendis beatae aliquid asperiores, neque reiciendis?
-              </p>
-            </div>
+        </div>
+        <div class="grid-inner">
+          <img src="../public/images/perfumes/image-14.jpg" alt="grid-image" />
+          <div class="grid-info">
+            <p>Perfume Name</p>
+            <a href="#">Perfume Link</a>
+          </div>
+        </div>
+        <div class="grid-inner">
+          <img src="../public/images/perfumes/image-15.jpg" alt="grid-image" />
+          <div class="grid-info">
+            <p>Perfume Name</p>
+            <a href="#">Perfume Link</a>
           </div>
         </div>
       </section>
+
       <!-- best sellers -->
-      <section class="best-seller--holder">
-        <div class="best-seller--inner">
-          <img src="../public/images/perfumes/image-9.jpg" alt="perfume" />
-          <div class="best-seller--info">
-            <p>Eternal Blossom</p>
-            <p>
-              Enchanting floral blend, lingering aroma of blooming gardens and
-              romance.
-            </p>
-            <select name="" id="">
-              <option value="big">100ml</option>
-              <option value="small">3ml</option>
-            </select>
-            <a href="#">Buy</a>
+      <section class="best-seller--section">
+        <div
+          id="carouselExampleControls"
+          class="carousel"
+          data-bs-ride="carousel"
+        >
+          <div class="carousel-inner best-seller--inner">
+            <div class="carousel-item best-seller--item active">
+              <div class="card">
+                <img
+                  src="../public/images/perfumes/image-1.jpg"
+                  class="card-img-top"
+                  alt="..."
+                />
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">
+                    Some quick example text to build on the card title and make
+                    up the bulk of the card's content.
+                  </p>
+                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+              </div>
+            </div>
+            <div class="carousel-item best-seller--item">
+              <div class="card">
+                <img
+                  src="../public/images/perfumes/image-1.jpg"
+                  class="card-img-top"
+                  alt="..."
+                />
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">
+                    Some quick example text to build on the card title and make
+                    up the bulk of the card's content.
+                  </p>
+                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+              </div>
+            </div>
+            <div class="carousel-item best-seller--item">
+              <div class="card">
+                <img
+                  src="../public/images/perfumes/image-1.jpg"
+                  class="card-img-top"
+                  alt="..."
+                />
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">
+                    Some quick example text to build on the card title and make
+                    up the bulk of the card's content.
+                  </p>
+                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+              </div>
+            </div>
+            <div class="carousel-item best-seller--item">
+              <div class="card">
+                <img
+                  src="../public/images/perfumes/image-1.jpg"
+                  class="card-img-top"
+                  alt="..."
+                />
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">
+                    Some quick example text to build on the card title and make
+                    up the bulk of the card's content.
+                  </p>
+                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+              </div>
+            </div>
+            <div class="carousel-item best-seller--item">
+              <div class="card">
+                <img
+                  src="../public/images/perfumes/image-1.jpg"
+                  class="card-img-top"
+                  alt="..."
+                />
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">
+                    Some quick example text to build on the card title and make
+                    up the bulk of the card's content.
+                  </p>
+                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+              </div>
+            </div>
+            <div class="carousel-item best-seller--item">
+              <div class="card">
+                <img
+                  src="../public/images/perfumes/image-1.jpg"
+                  class="card-img-top"
+                  alt="..."
+                />
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">
+                    Some quick example text to build on the card title and make
+                    up the bulk of the card's content.
+                  </p>
+                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+              </div>
+            </div>
           </div>
-        </div>
-
-        <div class="best-seller--inner">
-          <img src="../public/images/perfumes/image-9.jpg" alt="perfume" />
-          <div class="best-seller--info">
-            <p>Velvet Noir</p>
-            <p>
-              Enchanting floral blend, lingering aroma of blooming gardens and
-              romance.
-            </p>
-            <select name="" id="">
-              <option value="big">100ml</option>
-              <option value="small">3ml</option>
-            </select>
-            <a href="#">Buy</a>
-          </div>
-        </div>
-        <div class="best-seller--inner">
-          <img src="../public/images/perfumes/image-9.jpg" alt="perfume" />
-          <div class="best-seller--info">
-            <p>Ocean Breeze</p>
-            <p>
-              Enchanting floral blend, lingering aroma of blooming gardens and
-              romance.
-            </p>
-            <select name="" id="">
-              <option value="big">100ml</option>
-              <option value="small">3ml</option>
-            </select>
-            <a href="#">Buy</a>
-          </div>
-        </div>
-        <div class="best-seller--inner">
-          <img src="../public/images/perfumes/image-9.jpg" alt="perfume" />
-          <div class="best-seller--info">
-            <p>Mystic Woods</p>
-            <p>
-              Enchanting floral blend, lingering aroma of blooming gardens and
-              romance.
-            </p>
-            <select name="" id="">
-              <option value="big">100ml</option>
-              <option value="small">3ml</option>
-            </select>
-            <a href="#">Buy</a>
-          </div>
-        </div>
-
-        <div class="best-seller--inner">
-          <img src="../public/images/perfumes/image-9.jpg" alt="perfume" />
-          <div class="best-seller--info">
-            <p>Mystic Woods</p>
-            <p>
-              Enchanting floral blend, lingering aroma of blooming gardens and
-              romance.
-            </p>
-            <select name="" id="">
-              <option value="big">100ml</option>
-              <option value="small">3ml</option>
-            </select>
-            <a href="#">Buy</a>
-          </div>
+          <button
+            class="carousel-control-prev best-seller--prev"
+            type="button"
+            data-bs-target="#carouselExampleControls"
+            data-bs-slide="prev"
+          >
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button
+            class="carousel-control-next best-seller--next"
+            type="button"
+            data-bs-target="#carouselExampleControls"
+            data-bs-slide="next"
+          >
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
         </div>
       </section>
     </main>
@@ -323,8 +357,7 @@
         <a href="#" target="_blank" rel="noopener">Aleksa (Back-end)</a>
       </div>
     </footer>
-    <!-- my-script -->
-    <script src="FE scripts/script.js"></script>
+
     <!-- ion-icons -->
     <script
       type="module"
@@ -335,13 +368,16 @@
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
     ></script>
     <script
-      src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
-      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      src="https://code.jquery.com/jquery-3.6.0.min.js"
+      integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
       crossorigin="anonymous"
     ></script>
+    <!-- my-script -->
+    <script src="FE scripts/script.js"></script>
+    <!-- b5 -->
     <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct"
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
       crossorigin="anonymous"
     ></script>
   </body>
